# Cassie_CFROST

./: .gitignore  .gitmodules  README.md
+cassie/: load_animation.m  load_behavior.m
+cassie/+ROS/: init.m
+cassie/+constraints/: average_pitch.m  average_roll.m  average_velocity.m  distance_pelvis_to_stance_toe.m  left_toe_height.m  state_insertion_map.m  step_height.m  step_length.m  step_width.m  swing_toe_angular_velocity_x.m  swing_toe_angular_velocity_y.m  swing_toe_angular_velocity_z.m  swing_toe_linear_velocity_x.m  swing_toe_linear_velocity_y.m  swing_toe_linear_velocity_z.m
+cassie/+costs/: hip_rotation.m  roll.m  torque.m
+cassie/+domain/: double_lift.m  double_support.m  left_double_support.m  left_impact.m  left_lift.m  left_stance.m  lift.m  right_double_support.m  right_impact.m  right_lift.m  right_stance.m
+cassie/+holonomic/: left_toe_contact.m
+cassie/+opt/: left_impact_constraints.m  left_lift_constraints.m  left_stance_constraints.m  multi_domain_constraints.m  right_impact_constraints.m  right_lift_constraints.m  right_stance_constraints.asv  right_stance_constraints.m
+cassie/+unilateral/: right_toe_ground_reaction_force.m  right_toe_height.m
+cassie/+util/: getBounds.m  getPaths.m
+cassie/+utils/: getBounds.m  getPaths.m  mirrorState.m  mirrorStep.m
+cassie/+virtual/: actuated_joints.m
Cassie_Example/+cassie/: getRootPath.m  load_animation.m  load_behavior.m
Cassie_Example/cassie_dynamics_library/: .gitignore  CMakeLists.txt  gen_lib.m  getBounds.m
cassie_dynamics_library/: .gitignore  CMakeLists.txt  gen_lib.m
(+130 files in other folders)
